--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         }
         else
         {
-            allinfo = e + "\r\npassword\r\n" + p;
+            allinfo = e + "<h5>password</h5>" + p;
         }
         document.getElementById("email").innerHTML = allinfo;
     </script>
