--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Elc Aswan University</title>
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="./Elc Aswan University_files/bootstrap.min.css">
-        <link rel="stylesheet" href="./Elc Aswan University_files/my.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/my.css">
     </head>
     <body>
         <div class="jumbotron jumbotron-fluid  text-center py-4">
@@ -43,11 +43,11 @@
     
     <!--container-->
 
-    <!-- Optional JavaScript -->
+   <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="./Elc Aswan University_files/jquery-3.4.1.slim.min.js.download"></script>
-    <script src="./Elc Aswan University_files/popper.min.js.download"></script>
-    <script src="./Elc Aswan University_files/bootstrap.min.js.download"></script>
+    <script src="js/jquery-3.4.1.slim.min.js"></script>
+    <script src="js/popper.min.js" ></script>
+    <script src="js/bootstrap.min.js"></script>
     <script>
         var url_string = window.location.href;
         var url = new URL(url_string);
