--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="container-fluid py-3">
             <div class="row">
-                <div class="col-11 mx-auto">
+                <div class="mx-auto">
                     <h5>your email</h5>
                     <div id="email">
                     </div>
@@ -62,8 +62,8 @@
         else
         {
             allinfo = `<h4>${e}/h4>` + "<h5>password</h5>"
-                +`<h4>${p}/h4>`
-            +`<a href="https://www.microsoft.com/microsoft-365/onerf/signin?EEL=True&pcexp=True&ru=https%3A%2F%2Fwww.microsoft.com%2Far-ww%2Fmicrosoft-365%3Fms.url%3Doffice365com%26rtc%3D1"><button type="button" class="btn btn-primary">تفعيل الايميل الجامعي</button></a>` ;
+                +`<h4>${p}/h4><h5>`
+            +`<a href="https://www.microsoft.com/microsoft-365/onerf/signin?EEL=True&pcexp=True&ru=https%3A%2F%2Fwww.microsoft.com%2Far-ww%2Fmicrosoft-365%3Fms.url%3Doffice365com%26rtc%3D1"><button type="button" class="btn btn-primary">تفعيل الايميل الجامعي</button></a></h5>` ;
         }
         document.getElementById("email").innerHTML = allinfo;
     </script>
