--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="row py-2">
                 <div class="mx-auto m-1 py-2">
                     <a href="https://bit.ly/AswuELC">
-                        <img class="p-2" src="./Elc Aswan University_files/finallogo11.png" id="logo" alt="E-learing Aswan University logo">
+                        <img class="p-2" src="pic/finallogo11.png" id="logo" alt="E-learing Aswan University logo">
                     </a>
                 </div>
             </div>
@@ -61,8 +61,8 @@
         }
         else
         {
-            allinfo = `<h4>${e}/h4>` + "<h5>password</h5>"
-                +`<h4>${p}/h4><h5>`
+            allinfo = `<h4>${e}</h4>` + "<h5>password</h5>"
+                +`<h4>${p}</h4><h5>`
             +`<a href="https://www.microsoft.com/microsoft-365/onerf/signin?EEL=True&pcexp=True&ru=https%3A%2F%2Fwww.microsoft.com%2Far-ww%2Fmicrosoft-365%3Fms.url%3Doffice365com%26rtc%3D1"><button type="button" class="btn btn-primary">تفعيل الايميل الجامعي</button></a></h5>` ;
         }
         document.getElementById("email").innerHTML = allinfo;
