--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         {
             allinfo = `<h4>${e}</h4>` + "<h5>password</h5>"
                 +`<h4>${p}</h4><h5>`
-            +`<a href="https://www.microsoft.com/microsoft-365/onerf/signin?EEL=True&pcexp=True&ru=https%3A%2F%2Fwww.microsoft.com%2Far-ww%2Fmicrosoft-365%3Fms.url%3Doffice365com%26rtc%3D1"><button type="button" class="btn btn-primary">تفعيل الايميل الجامعي</button></a></h5>` ;
+            +`<a href="https://www.microsoft.com/microsoft-365/onerf/signin?EEL=True&pcexp=True&ru=https%3A%2F%2Fwww.microsoft.com%2Far-ww%2Fmicrosoft-365%3Fms.url%3Doffice365com%26rtc%3D1" target="_blank"><button type="button" class="btn btn-primary">تفعيل الايميل الجامعي</button></a></h5>` ;
         }
         document.getElementById("email").innerHTML = allinfo;
     </script>
