--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         var allinfo = "";
         if(p=="")
         {
-            allinfo = "لم يتم انشاء ايميل جامعي لم حتي الآن";
+            allinfo = "لم يتم انشاء حسابك الجامعي حتي الآن";
         }
         else
         {
