--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <body>
           <div class="jumbotron jumbotron-fluid  text-center py-4">
             <div class="">
-                <h1 class="display-4">وحدة التعلم الإلكتروني</h1> 
+              <div class="row py-2">
+                <div class="mx-auto m-1 py-2">
+                    <a href="https://bit.ly/AswuELC">
+                        <img class="p-2" src="pic/finallogo11.png" id="logo" alt="E-learing Aswan University logo">
+                    </a>
+                </div>
+            </div>
             </div>
         </div>
         <div class="container-fluid py-3">
@@ -27,13 +33,7 @@
         </div>
 
     <div class="container-fluid">
-            <div class="row py-2">
-                <div class="mx-auto m-1 py-2">
-                    <a href="https://bit.ly/AswuELC">
-                        <img class="p-2" src="pic/finallogo11.png" id="logo" alt="E-learing Aswan University logo">
-                    </a>
-                </div>
-            </div>
+            
             <div class="d-flex p-2 flex-column">
                 <div class="mx-auto text-white m-1 py-1">
                     <h6>Developed by <b><a class="text-white" href="https://ahmedhany7.github.io/CV/">Ahmed Hany</a></b></h6>
@@ -57,7 +57,7 @@
         var allinfo = "";
         if(p=="")
         {
-            allinfo = "لم يتم انشاء حسابك الجامعي حتي الآن";
+            allinfo = "جاري انشاء الايميل الجامعي";
         }
         else
         {
