--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="css/my.css">
     </head>
     <body>
+    <div class="container-fluid">
           <div class="jumbotron jumbotron-fluid  text-center py-4">
             <div class="">
               <div class="row py-2">
@@ -38,7 +39,7 @@
                 </div>
             </div>
         </div>
-
+</div>
     <!--container-->
 
    <!-- Optional JavaScript -->
