--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!--/row-->
         </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid d-none">
             
             <div class="d-flex p-2 flex-column">
                 <div class="mx-auto text-white m-1 py-1">
